--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -86,6 +86,12 @@
     {\lsstyle \bspades #1 \bhearts #2 \bdiams #3 \bclubs #4}
 }
 
+\newcommand{\chhand}[4]{
+    \begin{center}
+        \lsstyle \bspades #1 \bhearts #2 \bdiams #3 \bclubs #4
+    \end{center}
+}
+
 \newcounter{vhand}
 \newcommand{\vhand}[4]{%
     \begin{varwidth}{0.22\textwidth}
