--- a/other/2_rece_zrownowazone.tex
+++ b/other/2_rece_zrownowazone.tex
@@ -3,7 +3,7 @@
 \usepackage{polyglossia}
 \setmainlanguage{polish}
 
-\title{\vspace{-2cm}\#2 --- Ręce zbalansowane}
+\title{\vspace{-2cm}\#2 --- Ręce zrównoważone}
 \author{}
 \date{}
 
@@ -12,14 +12,14 @@
     \section{Streszczenie}
     Skala punktowa 4-3-2-1 sprawdza się szczególnie dobrze, jeśli w naszych kartach
     występuje mało układu. W tym poradniku pokażę, jak wykorzystać ją, żeby zawsze znaleźć 
-    odpowiedni kontrakt, gdy na otwarciu jest ręka zbalansowana.
+    odpowiedni kontrakt, gdy na otwarciu jest ręka zrównoważona.
 
     \begin{formal}
-        Ręka zbalansowana to ręka w składzie \textbf{4333}, \textbf{4432} lub \textbf{5332}. Czasami będziemy licytować
+        Ręka zrównoważona to ręka w składzie \textbf{4333}, \textbf{4432} lub \textbf{5332}. Czasami będziemy licytować
         tak samo również składy 5422.
     \end{formal}
 
-    Ręce zbalansowane dzielimy na kilka przedziałów pod względem siły. Rozróżniamy je otwarciem lub rebidem.
+    Ręce zrównoważone dzielimy na kilka przedziałów pod względem siły. Rozróżniamy je otwarciem lub rebidem.
     \begin{table}[h!]
         \centering
         \setlength{\extrarowheight}{3pt}
@@ -59,7 +59,7 @@
         W nienegatywnych (nie zaczynających się 1\clubs\ --- 1\diams) sekwencjach
         typu 1X - 1Y --- 1Z, następujące odzywki są checkbackami:
         \begin{itemize}
-            \item 2\clubs\ = dowolny \textbf{inwit}, na co partner musi powiedzieć 2\diams\,
+            \item 2\clubs\ = dowolny \textbf{inwit}, na co partner \textbf{musi powiedzieć 2\diams},
             a my licytujemy naturalnie 
             (dlaczego tak wyjaśnię później).
             \item 2\diams\ = dowolny \textbf{forsing}, na co partner licytuje naturalnie.
@@ -123,7 +123,7 @@
             \hhand{A5}{KQ43}{8432}{KJ2} & 2\hearts \\
             \hhand{A53}{KQ43}{842}{KJ2} & 2\hearts* \\
         \end{tabular}
-        \caption{*Jak partner ma 5 pików - powie 2\spades}
+        \caption{*Jak partner ma 5 pików - powie teraz 2\spades}
     \end{table}
 
     \pagebreak
@@ -157,9 +157,9 @@
         \setlength{\extrarowheight}{3pt}
         \begin{tabular}{rl}
             \multicolumn{1}{c}{Ręka} & \multicolumn{1}{c}{Licytuj} \\
-            \hhand{AJ832}{983}{Q43}{32} & 3\clubs - liczymy na 3\spades \\
-            \hhand{AJ832}{9832}{K4}{52} & 3\clubs - liczymy na 3\hearts\ lub 3\spades \\
-            \hhand{AJ8532}{764}{K4}{52} & 3\spades - pokazujemy szóstkę \\
+            \hhand{AJ832}{983}{Q43}{32} & 3\clubs\ - liczymy na 3 piki \\
+            \hhand{AJ832}{9832}{K4}{52} & 3\clubs\ - liczymy na 4 kiery lub 3 piki \\
+            \hhand{AJ8532}{764}{K4}{52} & 3\spades\ - pokazujemy szóstkę \\
             \hhand{AJ83}{743}{K983}{52} & 3\nt
         \end{tabular}
     \end{table}
@@ -180,7 +180,7 @@
     
     W pierwszej części tutorialu zdefiniowałem \textbf{two over one}
     z \textbf{przeskokiem} jako \gf\ z 5+ w kolorze.
-    Teraz jednak z takimi rękami możemy powiedzieć po prostu 1\spades,
+    Teraz jednak z takimi rękami możemy powiedzieć po prostu 1\hearts\ lub 1\spades,
     a potem zbilansować się i znaleźć fit przy pomocy \textbf{magistra}. 
     
     Zatem przyjmijmy nowe ustalenie,
@@ -188,9 +188,10 @@
 
     \begin{formal}
         \begin{itemize}
-            \item Odpowiedź Two Over One bez przeskoku jest \gf\ z piątki 
+            \item Odpowiedź Two Over One bez przeskoku (np. 1\spades\ - 2\hearts) jest \gf\ z piątki 
             (z wyjątkiem 2\clubs)
-            \item Odpowiedź Two Over One z przeskokiem jest \gf\ \textbf{z szóstki}.
+            \item Odpowiedź Two Over One z przeskokiem (np. 1\hearts\ - 2\spades) jest \gf\ \textbf{z szóstki}.
+            Wyjątek: 1\clubs\ - 2\diams\ jest z piątki, bo 1\diams\ nie jest naturalne.
         \end{itemize}
     \end{formal}
 
