fix wykad z acola

--- a/Wyklady/acol-bez-kontroli.tex
+++ b/Wyklady/acol-bez-kontroli.tex
@@ -88,7 +88,7 @@ Pojawia sie problem w sekwencjach typu: \\[1em]
     3\spades\ & ?
 } \\[1em] \raggedright
 
-Jak tu silnie ustalić kiery? Rozwiązanie - transfery po pytającym relay'u!
+Jak tu silnie ustalić piki? Rozwiązanie - transfery po pytającym relay'u!
 \subsection*{2\clubs\ - 2\diams\ --- 2\hearts\ - 2\spades\ --- ?}
 \begin{itemize}
     \item 2\nt\ = 5\hearts, 4+\clubs
