--- a/Wyklady/acol-bez-kontroli.tex
+++ b/Wyklady/acol-bez-kontroli.tex
@@ -35,23 +35,32 @@ bo jak partner nie ma nic, to przeciwnikom wychodzi 4\hearts.
 \section{Odpowiedzi na acola}
 \begin{itemize}
     \item 2\diams\ - dowolna sensowna ręka
-    \item 2\hearts\ - supernegat, 0-3\hcp, z Królem dajemy 2\diams. Rebid OTW \textbf{nie forsuje!}
+    \item 2\hearts\ - supernegat, 0-3\hcp, z K dajemy 2\diams. \textbf{Zwalnia z \gf}!
     \item (smaczek dla lubiących ustalenia): 2\spades, 2\nt, 3\clubs, 3\diams\ = naturalne z piątki,
     co najmniej 4 honory (z AKQJT) w kolorze. 2\nt\ = \hearts
 \end{itemize}
 
 
 \pagebreak
-\section{2\clubs\ --- 2\diams \\ ?}
+\section{2\clubs\ - 2\diams\ --- ?}
 \begin{itemize}
     \item 2\hearts, 2\spades\ - naturalne, ręka raczej niezrównoważona
-    \item 2\nt\ - 23-24 PC, może być ze starszą piątką i młodszą czwórką, czasami też z singlem
+    \item 2\nt\ - 23-24 PC, może być ze 5\major\ i 4\minor, czasami też z singlem
     \item 3\clubs\ - (5)6+\clubs
     \item 3\diams\ - 6+\diams, raczej tylko długie kara, bo jest problem z pokazywaniem dwukolorówek. 
     Z rękami dwukolorowymi na karach - 1\diams.
     \item 3\hearts, 3\spades, 4\clubs, 4\diams\ - samoustalenia
-    \item 3\nt\ - 25+ BAL
+    \item 3\nt\ - 25+ BAL, ale jest ryzyko, że się pogubimy! Zwykle \textbf{wystarczy dać 2\ntx}, 
+    nawet z silną kartą, bo i tak mamy \gf!
 \end{itemize}
+
+\section{2\clubs\ - 2\hearts\ --- ?}
+\begin{itemize}
+    \item 2\spades\ = \fonce
+    \item 2\nt, 3\clubs, 3\diams\ = \nf
+    \item 3\hearts\ = \gf
+\end{itemize}
+Ze słabą ręką kierową można spasować na 2\hearts.
 
 \section{Licytacja relayowa odpowiadającego}
 \raggedright
@@ -75,7 +84,7 @@ Te odzywki nie są naturalne i tylko pytają o skład.
 
 Kiedy nie dawać relay'a? Kolor 5+ z czterama z pięciu honorów mogliśmy pokazać w pierwszym kółku.
 W drugim kółku - pokazujemy kolor naturalnie, jeśli ma \textbf{dokładnie 3 honory}. No i oczywiście
-QJTxx nie jest warte pokazywania - dajmy OTW się odlicytować!
+\diams QJTxx nie jest warte pokazywania - dajmy OTW się odlicytować!
 
 \pagebreak
 \section{Smaczki dla zaawansowanych}
@@ -89,7 +98,8 @@ Pojawia sie problem w sekwencjach typu: \\[1em]
 } \\[1em] \raggedright
 
 Jak tu silnie ustalić piki? Rozwiązanie - transfery po pytającym relay'u!
-\subsection*{2\clubs\ - 2\diams\ --- 2\hearts\ - 2\spades\ --- ?}
+
+\subsection*{2\clubs\ --- 2\diams\ \\ 2\hearts\ --- 2\spades\ \\ ?}
 \begin{itemize}
     \item 2\nt\ = 5\hearts, 4+\clubs
     \item 3\clubs\ = 5\hearts, 4+\diams
