--- a/SAYC/sayc.tex
+++ b/SAYC/sayc.tex
@@ -119,20 +119,27 @@
     \item 2\nt\ - transfer na \diams\ (może być jakieś 5/5 \minor)
     \subitem 3\clubs\ - wolę trefle od kar
     \subitem 3\diams\ - wolę kara od trefli
-    \item 3\clubs\ - Puppet
-    \item 3\diams\ - 22(5/4)
+    \item 3\clubs\ - Krótkość \clubs, 5+\diams
+    \item 3\diams\ - Krótkość \diams, 5+\clubs
     \item 3\hearts, 3\spades\ - młode co najmniej 5/4, krótkość
-    \item 4\clubs\ - 5/5 \major\
+    \item 4\clubs\ - 5/5 \major\ bez ambicji (4\diams\ nie istnieje)
+\end{itemize}
+
+\subsection{1\ntx\ --- 2\clubs \\ 2\diams\ --- ?}
+\begin{itemize}
+    \item 2\hearts, 2\spades\ - do pasa!
+    \item 3\clubs\ - \textbf{Pytanie o skład na młodych}
+    \subitem 3\diams\ - 4+/4+ \minor, 3\major\ uzgadnia odpowiednio młody
+    \subitem 3\hearts, 3\spades\ = 5+\clubs/\diams
+    \subitem 3\nt\ - 4333 (można dać z gównianym 4/4\minor)
+    \item 3\diams\ - \textbf{Pytanie o starszą trójkę}
+    \subitem 4\clubs\ - obie trójki, następnie 4\diams\hearts\ \textbf{transfer}
 \end{itemize}
 
 \subsection{Szczególne sekwencje}
 \begin{itemize}
-    \item 1\nt\ - 2\clubs\ --- 2\diams\ - 2\spades\ = \inv\ z 5\spades, 4\hearts
-    \item 1\nt\ - 2\diams\ --- 2\hearts\ - 2\spades\ = \inv\ z 5\hearts, 4\spades
-    \item 1\nt\ - 2\clubs\ --- 2\hearts\ - 2\spades\ = silne ustalenie kierów bez krótkości
-    \item 1\nt\ - 2\clubs\ --- 2\spades\ - 3\hearts\ = silne ustalenie pików bez krótkości
+    \item 1\nt\ - 2\hearts\ --- 2\spades\ - 3\hearts\ = \inv\ na 5\spades 4\hearts
     \item Po transferze nie ma ustalenia forsującego do szlemika - używamy dużego transferu i poziomu 5!
-    \item Mały transfer i skok na 4 = inwit do szlemika, \textbf{nie boimy się} go przyjmować na poziom 5.
 \end{itemize}
 
 
@@ -308,6 +315,20 @@ Streszczenie kontynuacji w 3 zdania:
 \end{itemize}
 * tutaj pokazanie krótkości wysokiej (\hearts) jest \gf\ NO I HUJ MORZE PUJDZIE
 
+\begin{formal}
+    Po odzywce "GF z czwórki" i sfitowaniu koloru 4-4 \textbf{nie gramy} non-serious - 3\nt\ jest propozycyjne.
+\end{formal}
+
+\subsection{Podnoszenie w licytacji dwustronnej \\
+            1\clubs\ - (1\hearts) - 1\spades\ - (\passx) \\
+            2\spades\ - (\passx) - ?}
+
+\begin{itemize}
+    \item 2\nt\ - sztuczne pytanie o długość (3\spades\ = 4, inne = 3)
+    \item 3\clubs\ - inwit z 4+\clubs
+    \item 3\diams\ - pytanie o krótkość
+    \item 3\hearts\ - GF z czwórką
+\end{itemize}
 
 
 % ******* %
