--- a/lib/test.tex
+++ b/lib/test.tex
@@ -3,11 +3,29 @@
 
 
 \begin{document}
-    \begin{hand}[h]
+\begin{center}
+    \hspace*{-12mm}
+    \vhand{AT4}{K74}{862}{T532}\\
+    \vhand{K87}{92}{KJ97}{QJ64}%
+    \begin{minipage}{3cm}%
         \centering
-        \vhand{AK876432}{Q}{AKT5}{-}
-        \we{-1em}
-        \vhand{9}{A52}{KJT98}{QJ96}
-        \caption{Test hand}
-     \end{hand}
+        \vspace{-5mm}
+        \nvul{N} \\[4mm]
+        \nvul{W} \ \ \ \textbf{\large1} \ \ \ \nvul{E} \\[4mm]
+        \nvul{S}
+    \end{minipage}%
+    \vhand{532}{T653}{AQ4}{AK9} \\\hspace*{-7mm}%
+    \vhand{QJ96}{AQJ8}{T53}{87}
+\end{center}
+
+
+\allbidding{
+    \vul{W} & \nvul{N} & \vul{E} & \nvul{S} \\
+    - & - & - &\pass\\
+    1\spades & 3\hearts & 4\nt &?%
+}
+\centering
+\hhand{5}{A853}{97532}{T83}
+
 \end{document}
+
