--- a/Wyklady/acol-bez-kontroli.tex
+++ b/Wyklady/acol-bez-kontroli.tex
@@ -37,14 +37,15 @@ bo jak partner nie ma nic, to przeciwnikom wychodzi 4\hearts.
     \item 2\diams\ - dowolna sensowna ręka
     \item 2\hearts\ - supernegat, 0-3\hcp, z K dajemy 2\diams. \textbf{Zwalnia z \gf}!
     \item (smaczek dla lubiących ustalenia): 2\spades, 2\nt, 3\clubs, 3\diams\ = naturalne z piątki,
-    co najmniej 4 honory (z AKQJT) w kolorze. 2\nt\ = \hearts
+    co najmniej 4 honory (z AKQJT) w kolorze (lub coś co gra jak 4 honory). 2\nt\ = \hearts
 \end{itemize}
 
 
 \pagebreak
 \section{2\clubs\ - 2\diams\ --- ?}
 \begin{itemize}
-    \item 2\hearts, 2\spades\ - naturalne, ręka raczej niezrównoważona
+    \item 2\hearts, 2\spades\ - naturalne, ręka raczej niezrównoważona. Chyba, że gramy
+    \emph{Kokish Relay}, wtedy 2\hearts\ zawiera również 25+ BAL.
     \item 2\nt\ - 23-24 PC, może być ze 5\major\ i 4\minor, czasami też z singlem
     \item 3\clubs\ - (5)6+\clubs
     \item 3\diams\ - 6+\diams, raczej tylko długie kara, bo jest problem z pokazywaniem dwukolorówek. 
