strefa oliwia 2nt bloki

--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -62,6 +62,7 @@
 \newcommand{\alrt}{\color{ProcessBlue}$^A$\color{black}}
 \newcommand{\soff}{\color{CadetBlue}\textsc{sign-off}\color{black}}
 \newcommand{\mixed}{\color{Fuchsia}\textbf{Mixed raise}\color{black}}
+\newcommand{\ns}{\color{BurntOrange}\textbf{Non-Serious}\color{black}}
 
 \DeclareFloatingEnvironment[
     fileext=frm,
