--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -44,6 +44,7 @@
 \newcommand{\nf}{\color{Green}\textbf{NF}\color{black}}
 \newcommand{\fonce}{\color{RedViolet}\textbf{F1}\color{black}\hspace{4pt}}
 \newcommand{\inv}{\color{PineGreen}\textbf{INV}\color{black}}
+\newcommand{\invp}{\color{Blue}\textbf{INV$^+$}\color{black}}
 \newcommand{\slamtry}{\color{WildStrawberry}\textbf{Slam Try}\color{black}\hspace{4pt}}
 \newcommand{\minor}{\color{OliveGreen}\ding{168}\hspace{-3pt}\color{BurntOrange}\ding{169}\color{black}}
 \newcommand{\major}{\color{Maroon}\ding{170}\hspace{-3pt}\color{Blue}\ding{171}\color{black}}
