--- a/StrefaOliwia/StrefaOliwia.tex
+++ b/StrefaOliwia/StrefaOliwia.tex
@@ -356,7 +356,7 @@ Używamy agresywnie, dodając sobie za krótkości. Od ok. 9PC, ale zdarza się 
     \item 2\nt\ = 18-20, 3\minor\ = \nf
 \end{itemize}
 
-\subsection*{Inne}
+\subsection*{Inne \vimp}
 \begin{itemize}
     \item 1\hearts\ - 1\nt\ --- 2\spades\ = 6\hearts5\spades
     \item 1\major\ - 1\nt\ --- 2\nt\ = 6\major5\minor, 3\clubs\ = ASK -> 3\diams\ = \clubs, 3\hearts\ = \diams
