--- a/Mahjong/yaku.tex
+++ b/Mahjong/yaku.tex
@@ -53,7 +53,7 @@
     Układ zawiera dwa razy identyczny strit. \han{1}
 
     \textbf{Triple Chi \\}
-    Układ zawiera trzy strity o tych samych wartościach w każdym kolorze. \chan{1}{2}
+    Układ zawiera po jednym stricie o tych samych wartościach w każdym kolorze. \chan{1}{2}
 
     \textbf{Pure Straight \\}
     Układ zawiera 123, 456 i 789 jednego koloru. \chan{1}{2}
@@ -65,7 +65,7 @@
     Układ zawiera set o identycznej wartości w każdym kolorze. \han{2}
 
     \textbf{Triple Concealed Pung \\}
-    Układ zawiera trzy zamknięte trójki. Czwarty element może być otwarty. \han{2}
+    Układ zawiera trzy zamknięte sety. Czwarty element może być otwarty. \han{2}
 
     \textbf{All Pung \\}
     Układ zawiera cztery sety. \han{2}
