--- a/Multi/multi.tex
+++ b/Multi/multi.tex
@@ -6,7 +6,10 @@
 \setmainlanguage{polish}
 
 \title{Twoja stara otwiera multi i stawia 800}
+\date{}
+\author{Bartek Slupik}
 \begin{document}
+\maketitle
 \section{Podstawowe odzywki}
 \begin{itemize}
     \item \dbl\ = (13)14-16 BAL, wyklucza starszą piątkę. Młody singiel OK. \vimp
