--- a/Multi/multi.tex
+++ b/Multi/multi.tex
@@ -76,7 +76,7 @@
 \begin{itemize}
     \item \pass\ = \fonce, wznowienie 3\spades\ partnera = GF z singlem \spades
     \item \dbl\ = karna
-    \item 2\nt\ = "bardzo nie chcę bronić", \gf
+    \item 2\nt\ = ``bardzo nie chcę bronić'', \gf
     \item 3\clubs\ = NAT, \gf
     \item 3\diams\ = NAT, \gf
     \item 3\hearts\ = NAT, \gf
@@ -110,13 +110,13 @@
 
 
 \pagebreak
-\section{Wejście na czawartej ręce}
+\section{Wejście na czwartej ręce}
 
 \subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
 \begin{itemize}
     \item \pass\ = gówno lub takeout z krótkością pik
     \item \dbl\ = 14-16 BAL. Na wszystkie wyższe odzywki \dbl\ są wywoławcze.
-    \item 2\spades\ = może być z ładnej czwórki jeśli ma krótkośc kier
+    \item 2\spades\ = może być z ładnej czwórki jeśli ma krótkość kier
     \item 2\nt\ = 17-19 BAL
 \end{itemize}
 
@@ -134,6 +134,6 @@
 \begin{itemize}
     \item \pass\ = gówno lub takeout z krótkością kier
     \item \dbl\ = Takeout, może mieć silną siłę. Nie jest to wznówka.
-    \item 2\nt\ = młode, po 2\spades może być dowolna z kierami
+    \item 2\nt\ = młode, po 2\spades\ może być dowolna z kierami
 \end{itemize}
 \end{document}
