system creating script

--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -10,8 +10,9 @@
 \begin{document}
 \maketitle
 
+%%% PRIORITY: 42
+%%% TITLE: 2nt overcall after major preempt
 %%% SYSTEM BEGIN %%%
-%%% 2nt overcall after major preempt %%%
 
 \subsubsection*{(2\majs) -- ?}
 \begin{itemize}
