--- a/KrysiaBartek2024/source/reverses.tex
+++ b/KrysiaBartek2024/source/reverses.tex
@@ -10,8 +10,9 @@
 \begin{document}
 \maketitle
 
+%%% PRIORITY: 41
+%%% TITLE: Reverses, jump shifts and jump reverses
 %%% SYSTEM BEGIN %%%
-%%% Reverses, jump shifts and jump reverses %%%
 
 \subsubsection*{1\anysuit{x}\ -- 1\anysuit{y}\ -- ?}
 \begin{itemize}
@@ -49,6 +50,8 @@
     \item shows 6+ cards in first suit
     \item does not promise anything in the second suit
 \end{itemize}
+
+% note: it is not necessarily a good idea to google 'latex transparent'
 
 \section{Reverse: responder's rebid}
 \begin{itemize}
