--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -74,6 +74,7 @@
 \newcommand{\anysuit}[1]{\color{PineGreen}{\textbf{{#1}}}\color{black}}
 \newcommand{\mins}{\textbf{m}}
 \newcommand{\majs}{\textbf{M}}
+\newcommand{\alrts}{\textsuperscript{\textcolor{red}{A}}}
 
 \DeclareFloatingEnvironment[
     fileext=frm,
@@ -123,9 +124,6 @@
     \end{varwidth}%
 }
 
-
-
-
 \newcommand{\we}{
     \begin{varwidth}{0.20\linewidth}
         \centering
@@ -149,7 +147,6 @@
 
 \newcommand{\br}{\vspace{0.5em}}
 
-
 \definecolor{formalshade}{rgb}{0.95,0.95,1}
 \definecolor{darkblue}{rgb}{0.2,0.2,0.6}
 \newenvironment{formal}{%
@@ -167,7 +164,6 @@
   {%
     \vspace{2pt}\end{adjustwidth}\endMakeFramed%
   }
-
 
 \newcommand{\allbidding}[1]{
     \begin{table}[h!]
