1nt interf update

--- a/KrysiaBartek2024/source/1ntInterference.tex
+++ b/KrysiaBartek2024/source/1ntInterference.tex
@@ -18,8 +18,9 @@
 2\clubs\ = \clubs
 \begin{itemize}
     \item \dbl\ = Stayman
-    \item SYSTEM ON
 \end{itemize}
+
+SYSTEM ON
 
 \subsubsection*{1\nt\ -- (2\clubs\alrts) -- ?}
 2\clubs\ = 5/4 \major
@@ -30,7 +31,7 @@
 \end{itemize}
 
 \subsubsection*{1\nt\ -- (2\diams) -- ?}
-2\clubs\ = \diams
+2\diams\ = \diams
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\hearts, 2\spades = to play
@@ -71,7 +72,66 @@
     \item 4\hearts\ = Texas
 \end{itemize}
 
+\subsubsection*{1\nt\ -- (2\spades) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 2\nt\ = Lebensohl
+    \item 3\clubs\ = 5+\diams, inv+
+    \item 3\diams\ = 5+\hearts, inv+
+    \item 3\hearts\ = 55 \minor, \gf
+    \item 3\spades\ = 1-\spades, inv+
+    \item 3\nt\ = no \spades stopper
+    \item 4\diams\ = Texas
+\end{itemize}
 
+\subsubsection*{1\nt\ -- (2\nt\alrts) -- ?}
+2\nt\ = minor
+\begin{itemize}
+    \item \dbl\ = 10+
+    \item 3\clubs\ = Stayman
+    \item 3\diams\ = 5+\hearts, inv+
+    \item 3\hearts\ = 5+\spades, inv+
+\end{itemize}
+
+\subsubsection*{1\nt\ -- (3\clubs) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 3\diams\ = 5+\hearts, inv+
+    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\spades\ = 5+\diams, inv+
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\nt\ -- (3\diams) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\spades\ = 5+\hearts, \gf
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\nt\ -- (\dbl\alrts) -- ?}
+\dbl\ artificial
+
+SYSTEM ON
+
+
+\subsubsection*{1\nt\ -- (\dbl) -- ?}
+\dbl\ = penalty
+\begin{itemize}
+    \item \pass\ = forces \rdbl
+    \item \rdbl\ = forces 2\clubs
+    \item 2\anysuit{x} = forces \anysuit{x+1}
+\end{itemize}
+
+\subsubsection*{1\nt\ -- (\dbl) -- P\alrts\ -- (P)\\
+                \rdbl\ -- (P) -- ?}
+\begin{itemize}
+    \item \pass\ = penalty
+    \item 2\clubs\ = 4\clubs + 4\anysuit{x}\ or 4333 or any other edge case
+    \item 2\diams\ = 4\diams + 4\major
+    \item 2\hearts\ = 4\hearts + 4\spades
+\end{itemize}
 
 %%% SYSTEM END %%%
 
