--- a/KrysiaBartek2024/source/1ntInterference.tex
+++ b/KrysiaBartek2024/source/1ntInterference.tex
@@ -5,13 +5,13 @@
 \usepackage{enumitem}
 \setmainlanguage{english}
 
-\title{1nt -- dealing with interference}
+\title{1\nt\ -- dealing with interference}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% PRIORITY: 80
-%%% TITLE: 1nt -- dealing with interference
+%%% TITLE: 1\nt\ -- dealing with interference
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\nt\ -- (2\clubs) -- ?}
@@ -34,13 +34,13 @@ SYSTEM ON
 2\diams\ = \diams
 \begin{itemize}
     \item \dbl\ = negative
-    \item 2\hearts, 2\spades = to play
+    \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
     \item 3\clubs\ = 5+\hearts, inv+
     \item 3\diams\ = 1-\diams, inv+
     \item 3\hearts\ = 5+\spades, inv+
     \item 3\spades\ = 5+\clubs, inv+
-    \item 3\nt\ = no \diams stopper
+    \item 3\nt\ = no \diams\ stopper
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
 
@@ -48,7 +48,7 @@ SYSTEM ON
 2\diams\ = 6+ \major
 \begin{itemize}
     \item \dbl\ = 8+
-    \item 2\hearts, 2\spades = to play
+    \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
     \item 3\clubs\ = 5+\diams, inv+
     \item 3\diams\ = 5+\hearts, inv+
@@ -68,7 +68,7 @@ SYSTEM ON
     \item 3\diams\ = 5+\spades, inv+
     \item 3\hearts\ = 1-\hearts, inv+
     \item 3\spades\ = 55 \minor, \gf
-    \item 3\nt\ = no \hearts stopper
+    \item 3\nt\ = no \hearts\ stopper
     \item 4\hearts\ = Texas
 \end{itemize}
 
@@ -80,7 +80,7 @@ SYSTEM ON
     \item 3\diams\ = 5+\hearts, inv+
     \item 3\hearts\ = 55 \minor, \gf
     \item 3\spades\ = 1-\spades, inv+
-    \item 3\nt\ = no \spades stopper
+    \item 3\nt\ = no \spades\ stopper
     \item 4\diams\ = Texas
 \end{itemize}
 
@@ -121,16 +121,16 @@ SYSTEM ON
 \begin{itemize}
     \item \pass\ = forces \rdbl
     \item \rdbl\ = forces 2\clubs
-    \item 2\anysuit{x} = forces \anysuit{x+1}
+    \item 2\anysuit{x}\ = forces \anysuit{x+1}
 \end{itemize}
 
 \subsubsection*{1\nt\ -- (\dbl) -- P\alrts\ -- (P)\\
                 \rdbl\ -- (P) -- ?}
 \begin{itemize}
     \item \pass\ = penalty
-    \item 2\clubs\ = 4\clubs + 4\anysuit{x}\ or 4333 or any other edge case
-    \item 2\diams\ = 4\diams + 4\major
-    \item 2\hearts\ = 4\hearts + 4\spades
+    \item 2\clubs\ = 4\clubs\ + 4\anysuit{x}\ or 4333 or any other edge case
+    \item 2\diams\ = 4\diams\ + 4\major
+    \item 2\hearts\ = 4\hearts\ + 4\spades
 \end{itemize}
 
 %%% SYSTEM END %%%
